--- a/sass/bits/02_vars/_colors.scss
+++ b/sass/bits/02_vars/_colors.scss
@@ -31,6 +31,11 @@ $page-logo-color: $gold;
 $article-background-color: $white;
 $article-meta-color: $grey;
 
+$comments-background-color: $white;
+$comment-border-color: $silver;
+$comment-active-border-color: $gold;
+$comment-button-color: $gold;
+
 $pagination-background-color: $gold;
 $pagination-color: $silver;
 
