Improved embedding tweets and added GA DisplayFeatures

--- a/sass/modules/_post.scss
+++ b/sass/modules/_post.scss
@@ -227,6 +227,12 @@
 		margin-bottom: 1.3125em !important;
 		display: block;
 	}
+
+	.twitter-tweet {
+		width: initial !important;
+		margin-left: auto !important;
+		margin-right: auto !important;
+	}
 }
 
 .m-post.m-post--simple {
